Fix issue #509 WWC logo cut off (#543)

--- a/frontend/src/components/layout/ContainerWithNav.module.css
+++ b/frontend/src/components/layout/ContainerWithNav.module.css
@@ -168,7 +168,7 @@
 
   .navbar-wwc-logo .logo-png {
     width: 70px;
-    height: 36px;
+    height: 38px;
     left: 8px;
     top: 10px;
 
